# BusinessQaRag

./: README.md  Task1_RAG_QA_Bot.ipynb  Task2_RAG_Optimization_Techniques.html  Task2_RAG_Optimization_Techniques.md  Task3_Dataset_Preparation_and_Fine_Tuning.html  Task3_Dataset_Preparation_and_Fine_Tuning.md  app.py  convert_to_pdf.py  demo_responses.py  document_processor.py  pyproject.toml  rag_system.py  simple_pdf_converter.py  utils.py  vector_store.py
